--- a/1st-place-public-2nd-place-solution.ipynb
+++ b/1st-place-public-2nd-place-solution.ipynb
@@ -3348,7 +3348,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2e5545b8",
+   "id": "ce03106b",
    "metadata": {},
    "outputs": [
     {
@@ -3840,7 +3840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "1306bfda",
    "metadata": {
     "execution": {
@@ -3927,7 +3927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "3c3ad6b2",
    "metadata": {
     "execution": {
@@ -3946,14 +3946,28 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[calculate order of time-id] 0.014sec\n",
+      "folds0: train=257362, valid=42882\n",
+      "folds1: train=300244, valid=42896\n",
+      "folds2: train=343140, valid=42896\n",
+      "folds3: train=386036, valid=42896\n",
+      "[make folds] 12.012sec\n"
+     ]
+    }
+   ],
    "source": [
     "if CV_SPLIT == 'time':\n",
     "    with timer('calculate order of time-id'):\n",
     "        if USE_PRECOMPUTE_FEATURES:\n",
-    "            timeid_order = pd.read_csv(os.path.join(DATA_DIR, 'optiver-time-id-ordered', 'time_id_order.csv'))\n",
+    "            timeid_order = pd.read_csv('time_id_order.csv')\n",
     "        else:\n",
     "            timeid_order = reconstruct_time_id_order()\n",
+    "            \n",
     "\n",
     "    with timer('make folds'):\n",
     "        timeid_order['time_id_order'] = np.arange(len(timeid_order))\n",
@@ -4004,7 +4018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "36f6f703",
    "metadata": {
     "execution": {
@@ -4107,7 +4121,23 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(428932, 584)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\samsung\\anaconda3\\lib\\site-packages\\lightgbm\\engine.py:577: UserWarning: 'early_stopping_rounds' argument is deprecated and will be removed in a future release of LightGBM. Pass 'early_stopping()' callback via 'callbacks' argument instead.\n",
+      "  _log_warning(\"'early_stopping_rounds' argument is deprecated and will be removed in a future release of LightGBM. \"\n"
+     ]
+    }
+   ],
    "source": [
     "lr = GBDT_LR\n",
     "if SHORTCUT_GBDT_IN_1ST_STAGE and IS_1ST_STAGE:\n",
